<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:padding="4dp">

        <ImageView
            android:id="@+id/img_item_photo"
            android:layout_width="100dp"
            android:layout_height="170dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:scaleType="fitCenter"
            tools:src="@tools:sample/avatars" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toEndOf="@+id/img_item_photo"
            android:layout_marginStart="16dp"
            android:orientation="vertical"
            android:layout_above="@+id/layout_button">

            <TextView
                android:id="@+id/tv_item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                tools:text="@string/smartphone_name" />

            <TextView
                android:id="@+id/tv_item_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textStyle="normal"
                android:textSize="16sp"
                tools:text="@string/price" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/layout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@id/img_item_photo"
            android:orientation="horizontal">
            
            <Button
                android:id="@+id/btn_set_buy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="4dp"
                android:textSize="12sp"
                android:text="@string/buy"/>

            <Button
                android:id="@+id/btn_set_spec_detail"
                android:layout_width="match_parent"
                android:layout_marginStart="4dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="12sp"
                android:text="@string/spec"/>

        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>